# mytest-conan-cmake-universal

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  init.sh  mytest.profile
